Add localization, new commands, and more

--- a/angav.cls
+++ b/angav.cls
@@ -6,25 +6,97 @@
 \ifLuaTeX
   % continue
 \else
-  \ClassError{angav}{This class requires LuaLaTeX. Please compile with 'lualatex'.}{}
+  \ClassError{angav}{This class requires LuaLaTeX.}{}
 \fi
 
 % ---------- Class options ------------
+\newif\ifangav@polish
+\angav@polishfalse
+
+% \DeclareOption{xyz}{\angav@xyztrue}
+
+\DeclareOption*{\PassOptionsToClass{\CurrentOption}{scrartcl}}
+\ProcessOptions\relax
 
 
 % ---------- Load base class ------------
-\LoadClass{scrartcl}
+\LoadClassWithOptions{scrartcl}
 
 
 % ----------- Required packages ------------
+\RequirePackage{mathtools,amssymb,amsthm}
 
+\RequirePackage{multirow}
+\RequirePackage{multicol}
+
+\RequirePackage{marginalia}
+\marginaliasetup{style={\footnotesize}}
+
+\RequirePackage{fontsetup}  % loads fontspec and New Computer Modern
+\RequirePackage[lining]{raleway}  % loads Raleway sans serif font
+\setmonofont{JetBrainsMono}[Scale=0.85]
+\RequirePackage{microtype}
+
+\RequirePackage{babel}
 
 % ----------- Color definitions ------------
 
 
 % ----------- Hyperref setup ---------------
+\RequirePackage[colorlinks=true,hypertexnames=false,pdfusetitle]{hyperref}
 
+% ----------- Localization ---------------
+\iflanguage{polish}{
+  \babelprovide[transforms=oneletter.nobreak]{polish}
+  \AtBeginDocument{
+    % you can still use \le and \ge for the standard versions
+    \renewcommand{\leq}{\leqslant}
+    \renewcommand{\geq}{\geqslant}
+    \renewcommand{\nleq}{\nleqslant}
+    \renewcommand{\ngeq}{\ngeqslant}
+    \renewcommand{\preceq}{\preccurlyeq}
+    \renewcommand{\succeq}{\succcurlyeq}
+  }
+}{}
+
+\iflanguage{polish}{
+  \newcommand{\angav@solutionname}{Rozwiązanie}
+}{
+  \newcommand{\angav@solutionname}{Solution}
+}
+
+% ----------- Custom environments ---------------
+\newenvironment{solution}{\begin{proof}[\angav@solutionname]\small}{\end{proof}}
 
 % -------------- Custom commands ------------
+\newcommand{\sA}{{\symcal A}}
+\newcommand{\sB}{{\symcal B}}
+\newcommand{\sC}{{\symcal C}}
+\newcommand{\sD}{{\symcal D}}
+\newcommand{\sF}{{\symcal F}}
+\newcommand{\sG}{{\symcal G}}
+\newcommand{\sH}{{\symcal H}}
+\newcommand{\sL}{{\symcal L}}
+\newcommand{\sM}{{\symcal M}}
+\newcommand{\sO}{{\symcal O}}
+\newcommand{\sP}{{\symcal P}}
+\newcommand{\sR}{{\symcal R}}
+\newcommand{\sS}{{\symcal S}}
 
+\newcommand{\scA}{{\symscr A}}
+\newcommand{\scB}{{\symscr B}}
+\newcommand{\scC}{{\symscr C}}
+\newcommand{\scD}{{\symscr D}}
+\newcommand{\scE}{{\symscr E}}
+\newcommand{\scF}{{\symscr F}}
+\newcommand{\scG}{{\symscr G}}
+\newcommand{\scH}{{\symscr H}}
 
+\newcommand{\km}{{\symscr m}}
+\newcommand{\kp}{{\symscr p}}
+\newcommand{\kq}{{\symscr q}}
+
+\AtBeginDocument{
+    \renewcommand{\Re}{\operatorname{Re}}
+    \renewcommand{\Im}{\operatorname{Im}}
+}
